<resources>
    <string name="app_name">Music App</string>
    <string name="title_home">Home</string>
    <string name="title_library">Library</string>
    <string name="title_discovery">Discovery</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_album_hot">Album hot</string>
    <string name="text_song_title">Song title</string>
    <string name="text_song_artist">Song artist</string>
    <string name="title_recommended_songs">Recommended songs</string>
    <string name="title_detail_album">Album detail</string>
    <string name="imgDescription">Image Description</string>
    <string name="title_song_list">Song list</string>
    <string name="text_number_song">Number of songs: %d</string>
    <string name="title_more_album">Albums hot</string>
    <string name="download">Download</string>
    <string name="favourite">Add to favourite list</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="play_next">Play next</string>
    <string name="view_album">View album</string>
    <string name="view_artist">View artist</string>
    <string name="block">Block</string>
    <string name="report_error">Report error</string>
    <string name="view_details">View song information</string>
    <string name="text_song_info_title">Title: %s</string>
    <string name="text_song_info_artist">Artist: %s</string>
    <string name="text_song_info_album">Album: %s</string>
    <string name="text_song_info_duration">Duration: %d</string>
    <string name="text_song_info_counter">Number of plays: %d</string>
    <string name="text_song_info_replay">Number of replay: %d</string>
    <string name="text_song_info_favorite">Is your favorite song: %s</string>
    <string name="text_song_info_genre">Genre: %s</string>
    <string name="text_song_info_published_year">Publish year: %s</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_na">N/A</string>
    <string name="label_song_title">Song title</string>
    <string name="label_song_artist">Song artist</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="image_button_description">image_button_description</string>
    <string name="label_place_holder">Label</string>
    <string name="label_under_score">_ ___ _</string>
    <string name="message_permission_denied">Please grant post notification to continue.</string>
    <string name="action_agree">Agree</string>
    <string name="permission_description">This application need post notification permission to play music correctly and give you more experience when using app. Would you agree permit app use this permission?</string>
    <string name="title_recent_songs">Recent heard</string>
    <string name="title_favorite_songs">Favorite songs</string>
    <string name="text_playlist_name">Playlist name</string>
    <string name="text_create_a_playlist">Create a playlist</string>
    <string name="title_playlist">Playlists</string>
    <string name="playlist_name_hint">Playlist name</string>
    <string name="title_create_playlist">Create playlist</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_empty_playlist_name">Playlist name cannot be empty</string>
    <string name="error_playlist_already_exists">This playlist name already exists. Please use other name.</string>
    <string name="add_to_playlist_success">The song has been add to the playlist \"%s\" successfully!</string>
    <string name="error_add_to_playlist">This song already exists in your selected playlist.</string>
    <string name="title_playlist_detail">Playlist detail</string>
    <string name="text_artist_name">Artist name</string>
    <string name="text_number_of_interest">Number of interest: %d</string>
    <string name="action_interest">Interest</string>
    <string name="title_artist">Featured Artists</string>
    <string name="title_artist_detail">Artist information</string>
    <string name="text_detail_artist_name">Artist name: %s</string>
    <string name="text_detail_number_of_interest">Number of interest: %d</string>
    <string name="text_detail_your_interested_artist">Your interested artist: %s</string>
    <string name="title_most_heard">Most listened songs</string>
    <string name="title_for_you">For you</string>
    <string name="languages_header">Languages</string>
    <string name="theme_header">Theme</string>
    <string name="language_title">Application language</string>
    <string name="dark_mode_title">Dark mode</string>
    <string name="search_hint">Song name, artist…</string>
    <string name="key_history">Searched key</string>
    <string name="title_history_searched_keys">History searched keys</string>
    <string name="action_clear_all">Clear all</string>
    <string name="title_history_searched_songs">History searched songs</string>
    <string name="confirm_delete_title">Delete confirm</string>
    <string name="message_confirm_clear_history_searched_key">Are you sure to delete all history searched keys?</string>
    <string name="message_confirm_clear_history_searched_songs">Are you sure to delete all history searched songs?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_welcome">Welcome Back</string>
    <string name="title_login_to_your_account">Login to your account</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="text_login">Login</string>
    <string name="text_or_continue_with">Or continue with</string>
    <string name="action_forward_to_register">Don\'t have an account? Sign Up</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_enter_your_email_address_to_recover_reset_your_password">Enter your email address to recover/reset your password</string>
    <string name="text_hint_email_address">Email Address</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="action_back_to_login">Back to Login</string>
    <string name="text_create_account">Create account</string>
    <string name="text_create_your_account">Create your account</string>
    <string name="text_hint_full_name">Full Name</string>
    <string name="text_hint_confirm_password">Confirm Password</string>
    <string name="action_forward_to_login">Already have an account? Login</string>
    <string name="text_register">Register</string>
    <string name="text_please_fill_in_all_information">Please fill in all information</string>
    <string name="text_login_successful">Login successful</string>
    <string name="text_please_check_your_login_information_again">Please check your login information again.</string>
    <string name="text_network_error">Network error: </string>
    <string name="text_invalid_email_format">Email is not in correct format.</string>
    <string name="text_invalid_password_format">Password must be at least 6 characters, including letters and numbers.</string>
    <string name="text_confirmation_password_does_not_match">Confirmation password does not match.</string>
    <string name="text_registration_successful">Registration successful!</string>
    <string name="text_email_already_exists">Email already exists</string>
</resources>