<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dialog.information.SongInfoDialogFragment">

    <ImageView
        android:id="@+id/img_song_info_avatar"
        android:layout_width="@dimen/song_info_avatar_size_128dp"
        android:layout_height="@dimen/song_info_avatar_size_128dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_8dp"
        android:contentDescription="@string/imgDescription"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/text_song_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:text="@string/text_song_info_title"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_info_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:text="@string/text_song_info_artist"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_info_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:text="@string/text_song_info_album"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_info_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:text="@string/text_song_info_duration"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_info_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:text="@string/text_song_info_counter"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_info_replay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:text="@string/text_song_info_replay"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_info_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:text="@string/text_song_info_favorite"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_info_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:text="@string/text_song_info_genre"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_info_published_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:layout_marginBottom="@dimen/margin_24dp"
        android:text="@string/text_song_info_published_year"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
</LinearLayout>