<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imgDescription"
        android:src="@drawable/ic_arrow_back_black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/text_forgot_password"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_enter_your_email_address_to_recover_reset_your_password"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="#777777" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/padding_8dp"
            android:hint="@string/text_hint_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#6200EE"
        android:text="@string/text_reset_password"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/action_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:text="@string/action_back_to_login"
        android:textColor="#5D5FEF"
        android:textStyle="bold" />
</LinearLayout>
