<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.discovery.artist.detail.DetailArtistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_detail_artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_detail_artist_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_artist_detail"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/img_detail_artist_avatar"
            android:layout_width="@dimen/detail_artist_avatar_size"
            android:layout_height="@dimen/detail_artist_avatar_size"
            android:layout_marginTop="@dimen/margin_8dp"
            android:contentDescription="@string/imgDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_detail_artist"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_detail_artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_64dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_64dp"
            android:text="@string/text_detail_artist_name"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_detail_artist_avatar" />

        <TextView
            android:id="@+id/text_detail_artist_interest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/text_detail_number_of_interest"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintEnd_toEndOf="@+id/text_detail_artist_name"
            app:layout_constraintStart_toStartOf="@+id/text_detail_artist_name"
            app:layout_constraintTop_toBottomOf="@+id/text_detail_artist_name" />

        <TextView
            android:id="@+id/text_detail_artist_your_interest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/text_detail_your_interested_artist"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintEnd_toEndOf="@+id/text_detail_artist_interest"
            app:layout_constraintStart_toStartOf="@+id/text_detail_artist_interest"
            app:layout_constraintTop_toBottomOf="@+id/text_detail_artist_interest" />

        <include
            android:id="@+id/include_artist_song"
            layout="@layout/partial_song_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_detail_artist_your_interest" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>