<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_playlist_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_detail_album"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="149dp" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="@dimen/avatar_playlist_size"
            android:layout_height="@dimen/avatar_playlist_size"
            android:layout_marginTop="@dimen/margin_16dp"
            app:cardCornerRadius="@dimen/card_corner_radius_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_playlist_detail">

            <ImageView
                android:id="@+id/img_playlist_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/imgDescription"
                android:scaleType="centerCrop"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_title_playlist_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            tools:text="Tên album" />

        <TextView
            android:id="@+id/text_number_song_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            app:layout_constraintEnd_toEndOf="@+id/text_title_playlist_detail"
            app:layout_constraintStart_toStartOf="@+id/text_title_playlist_detail"
            app:layout_constraintTop_toBottomOf="@+id/text_title_playlist_detail"
            tools:text="Số lượng bài hát: 14" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_song_list"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_number_song_playlist" />

        <include
            android:id="@+id/include_song_list"
            layout="@layout/partial_song_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
